tests/types/errors/query_where_bool_required.mochi
// Query `where` predicate must be `bool`. MEP-14 lists this as T033 but
// today `checkExprWithExpected` short-circuits with T008 first. The
// fixture pins the actual diagnostic until the T033 path is reached.
let xs: list<int> = [1, 2, 3]
let bad = from x in xs where x select x
